# SnakeAi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pvc.yaml  training-job.yaml
.github/workflows/: ci.yml
SnakeAi/: CMakeLists.txt  GameScene.cpp  GameScene.h  HeadlessTrainer.h  Scene.h  SnakeAi.cpp  StartScene.cpp  StartScene.h
SnakeAi/Core/: AiAgent.cpp  AiAgent.h  Config.h  Node.h  SimpleNN.h  SnakeGame.cpp  SnakeGame.h
